<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp"
    tools:context=".UserInputFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/user_input_screen"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_editText"
        style="@style/main_editText"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/age_editText"
        style="@style/main_editText"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/age"
        android:inputType="number" />

    <EditText
        android:id="@+id/job_title_editText"
        style="@style/main_editText"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/job_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/gender_editText"
        style="@style/main_editText"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/gender" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_Button"
        style="@style/big_button_Style"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        app:backgroundTint="@null"
        app:cornerRadius="100dp" />

</LinearLayout>