<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingBottom="50dp">

    <androidx.cardview.widget.CardView
        android:layout_width="53dp"
        android:layout_height="5dp"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="2.5dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="53dp"
            android:layout_height="5dp"
            app:dividerColor="#C5C4C2" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_close_circle"
        app:layout_constraintBottom_toBottomOf="@id/pick_date_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pick_date_textView" />

    <TextView
        android:id="@+id/pick_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="42dp"
        android:text="@string/select_your_gender"
        android:textColor="@color/mainBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/male_Button"
        style="@style/big_button_Style"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/male"
        app:backgroundTint="@null"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_date_textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/female_Button"
        style="@style/big_button_Style"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/female"
        app:backgroundTint="@null"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/male_Button" />

</androidx.constraintlayout.widget.ConstraintLayout>